making typeql repo and creating maven

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "python.analysis.typeCheckingMode": "off",
     "githubPullRequests.ignoredPullRequestBranches": [
         "main"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
