First Query Running - Interactive Complex 2

--- a/typeql/driver/validate.properties
+++ b/typeql/driver/validate.properties
@@ -1,8 +1,8 @@
-endpoint=jdbc:postgresql://localhost:5432/ldbcsnb
-user=postgres
-password=mysecretpassword
+# endpoint=jdbc:postgresql://localhost:5432/ldbcsnb
+# user=postgres
+# password=mysecretpassword
 databaseName=ldbcsnb
-jdbcDriver=org.postgresql.ds.PGSimpleDataSource
+# jdbcDriver=org.postgresql.ds.PGSimpleDataSource
 queryDir=queries
 
 printQueryNames=true
