--- a/typeql/driver/benchmark-sf0.1.properties
+++ b/typeql/driver/benchmark-sf0.1.properties
@@ -3,11 +3,11 @@
 # password=mysecretpassword
 databaseName=ldbcsnb
 # jdbcDriver=org.postgresql.ds.PGSimpleDataSource
-# queryDir=queries
+queryDir=queries
 
-printQueryNames=true
-printQueryStrings=true
-printQueryResults=true
+printQueryNames=false
+printQueryStrings=false
+printQueryResults=false
 
 status=1
 thread_count=1
@@ -28,20 +28,20 @@ db=org.ldbcouncil.snb.impls.workloads.typeql.interactive.TypeQLInteractiveDb
 warmup=100
 operation_count=250
 
-ldbc.snb.interactive.updates_dir=../update-streams/
-ldbc.snb.interactive.parameters_dir=../parameters/
+ldbc.snb.interactive.updates_dir=../update-streams-sf0.1/
+ldbc.snb.interactive.parameters_dir=../parameters-sf0.1/
 ldbc.snb.interactive.short_read_dissipation=0.2
 
 # Supported scale factors are 0.1, 0.3, 1, 3, 10, 30, 100, 300, 1000
-ldbc.snb.interactive.scale_factor=1
+ldbc.snb.interactive.scale_factor=0.1
 
 # *** For debugging purposes ***
 
 ldbc.snb.interactive.LdbcQuery1_enable  = false
-ldbc.snb.interactive.LdbcQuery2_enable  = false
-ldbc.snb.interactive.LdbcQuery3_enable = false
-# ldbc.snb.interactive.LdbcQuery3a_enable = false
-# ldbc.snb.interactive.LdbcQuery3b_enable = false
+ldbc.snb.interactive.LdbcQuery2_enable  = true
+# ldbc.snb.interactive.LdbcQuery3_enable = false
+ldbc.snb.interactive.LdbcQuery3a_enable = false
+ldbc.snb.interactive.LdbcQuery3b_enable = false
 ldbc.snb.interactive.LdbcQuery4_enable  = false
 ldbc.snb.interactive.LdbcQuery5_enable  = false
 ldbc.snb.interactive.LdbcQuery6_enable  = false
@@ -51,14 +51,14 @@ ldbc.snb.interactive.LdbcQuery9_enable  = false
 ldbc.snb.interactive.LdbcQuery10_enable = false
 ldbc.snb.interactive.LdbcQuery11_enable = false
 ldbc.snb.interactive.LdbcQuery12_enable = false
-# ldbc.snb.interactive.LdbcQuery13a_enable = false
-# ldbc.snb.interactive.LdbcQuery13b_enable = false
-ldbc.snb.interactive.LdbcQuery13_enable = false
-# ldbc.snb.interactive.LdbcQuery14a_enable = false
-# ldbc.snb.interactive.LdbcQuery14b_enable = false
-ldbc.snb.interactive.LdbcQuery14_enable = false
+ldbc.snb.interactive.LdbcQuery13a_enable = false
+ldbc.snb.interactive.LdbcQuery13b_enable = false
+# ldbc.snb.interactive.LdbcQuery13_enable = false
+ldbc.snb.interactive.LdbcQuery14a_enable = false
+ldbc.snb.interactive.LdbcQuery14b_enable = false
+# ldbc.snb.interactive.LdbcQuery14_enable = false
 
-ldbc.snb.interactive.LdbcShortQuery1PersonProfile_enable  = true
+ldbc.snb.interactive.LdbcShortQuery1PersonProfile_enable  = false
 ldbc.snb.interactive.LdbcShortQuery2PersonPosts_enable    = false
 ldbc.snb.interactive.LdbcShortQuery3PersonFriends_enable  = false
 ldbc.snb.interactive.LdbcShortQuery4MessageContent_enable = false
