pushing some cleaned up code

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ initial-snapshot/*
 
 postgres/data/**
 typeql/data/**
+cypher/data/**
 snb-out-sf1-merged-fk.tar
 snb-out-sf1-merged-fk.tar.zst
+typeql/data1/**
+typeql/data.typedb
