--- a/typeql/driver/benchmark-sf0.1.properties
+++ b/typeql/driver/benchmark-sf0.1.properties
@@ -15,7 +15,7 @@ name=LDBC-SNB
 mode=execute_benchmark
 results_log=true
 time_unit=MILLISECONDS
-time_compression_ratio=0.001
+time_compression_ratio=0.01
 peer_identifiers=
 workload_statistics=false
 spinner_wait_duration=1
@@ -25,8 +25,8 @@ ignore_scheduled_start_times=false
 workload=org.ldbcouncil.snb.driver.workloads.interactive.LdbcSnbInteractiveWorkload
 db=org.ldbcouncil.snb.impls.workloads.typeql.interactive.TypeQLInteractiveDb
 
-warmup=100
-operation_count=250
+warmup=10
+operation_count=25
 
 ldbc.snb.interactive.updates_dir=../update-streams-sf0.1/
 ldbc.snb.interactive.parameters_dir=../parameters-sf0.1/
@@ -45,9 +45,9 @@ ldbc.snb.interactive.LdbcQuery3b_enable = false
 ldbc.snb.interactive.LdbcQuery4_enable  = false
 ldbc.snb.interactive.LdbcQuery5_enable  = false
 ldbc.snb.interactive.LdbcQuery6_enable  = false
-ldbc.snb.interactive.LdbcQuery7_enable  = false
-ldbc.snb.interactive.LdbcQuery8_enable  = false
-ldbc.snb.interactive.LdbcQuery9_enable  = false
+ldbc.snb.interactive.LdbcQuery7_enable  = true
+ldbc.snb.interactive.LdbcQuery8_enable  = true
+ldbc.snb.interactive.LdbcQuery9_enable  = true
 ldbc.snb.interactive.LdbcQuery10_enable = false
 ldbc.snb.interactive.LdbcQuery11_enable = false
 ldbc.snb.interactive.LdbcQuery12_enable = false
