--- a/typeql/driver/create-validation-parameters-sf0.1.properties
+++ b/typeql/driver/create-validation-parameters-sf0.1.properties
@@ -25,7 +25,7 @@ ignore_scheduled_start_times=true
 workload=org.ldbcouncil.snb.driver.workloads.interactive.LdbcSnbInteractiveWorkload
 db=org.ldbcouncil.snb.impls.workloads.typeql.interactive.TypeQLInteractiveDb
 
-operation_count=10000
+operation_count=1000
 
 validation_parameters_size=500
 validate_database=validation_params.json
@@ -39,14 +39,14 @@ ldbc.snb.interactive.scale_factor=0.1
 # *** For debugging purposes ***
 
 ldbc.snb.interactive.LdbcQuery1_enable  = false
-ldbc.snb.interactive.LdbcQuery2_enable  = false
+ldbc.snb.interactive.LdbcQuery2_enable  = true
 ldbc.snb.interactive.LdbcQuery3a_enable  = false
 ldbc.snb.interactive.LdbcQuery3b_enable  = false
 ldbc.snb.interactive.LdbcQuery4_enable  = false
 ldbc.snb.interactive.LdbcQuery5_enable  = false
 ldbc.snb.interactive.LdbcQuery6_enable  = false
-ldbc.snb.interactive.LdbcQuery7_enable  = false
-ldbc.snb.interactive.LdbcQuery8_enable  = false
+ldbc.snb.interactive.LdbcQuery7_enable  = true
+ldbc.snb.interactive.LdbcQuery8_enable  = true
 ldbc.snb.interactive.LdbcQuery9_enable  = false
 ldbc.snb.interactive.LdbcQuery10_enable = false
 ldbc.snb.interactive.LdbcQuery11_enable = false
