loader and some queries

--- a/typeql/driver/benchmark-sf0.1.properties
+++ b/typeql/driver/benchmark-sf0.1.properties
@@ -1,13 +1,13 @@
-# endpoint=jdbc:postgresql://localhost:5432/ldbcsnb
+endpoint=0.0.0.0:1729
 # user=postgres
 # password=mysecretpassword
 databaseName=ldbcsnb
 # jdbcDriver=org.postgresql.ds.PGSimpleDataSource
 queryDir=queries
 
-printQueryNames=false
-printQueryStrings=false
-printQueryResults=false
+printQueryNames=true
+printQueryStrings=true
+printQueryResults=true
 
 status=1
 thread_count=1
@@ -45,9 +45,9 @@ ldbc.snb.interactive.LdbcQuery3b_enable = false
 ldbc.snb.interactive.LdbcQuery4_enable  = false
 ldbc.snb.interactive.LdbcQuery5_enable  = false
 ldbc.snb.interactive.LdbcQuery6_enable  = false
-ldbc.snb.interactive.LdbcQuery7_enable  = true
-ldbc.snb.interactive.LdbcQuery8_enable  = true
-ldbc.snb.interactive.LdbcQuery9_enable  = true
+ldbc.snb.interactive.LdbcQuery7_enable  = false
+ldbc.snb.interactive.LdbcQuery8_enable  = false
+ldbc.snb.interactive.LdbcQuery9_enable  = false
 ldbc.snb.interactive.LdbcQuery10_enable = false
 ldbc.snb.interactive.LdbcQuery11_enable = false
 ldbc.snb.interactive.LdbcQuery12_enable = false
@@ -58,7 +58,7 @@ ldbc.snb.interactive.LdbcQuery14a_enable = false
 ldbc.snb.interactive.LdbcQuery14b_enable = false
 # ldbc.snb.interactive.LdbcQuery14_enable = false
 
-ldbc.snb.interactive.LdbcShortQuery1PersonProfile_enable  = false
+ldbc.snb.interactive.LdbcShortQuery1PersonProfile_enable  = true
 ldbc.snb.interactive.LdbcShortQuery2PersonPosts_enable    = false
 ldbc.snb.interactive.LdbcShortQuery3PersonFriends_enable  = false
 ldbc.snb.interactive.LdbcShortQuery4MessageContent_enable = false
