--- a/typeql/pom.xml
+++ b/typeql/pom.xml
@@ -22,11 +22,11 @@
     <dependencies>
         <dependency>
             <groupId>com.vaticle.typedb</groupId>
-            <artifactId>typedb-client</artifactId>
-            <version>2.18.0</version>
+            <artifactId>typedb-driver</artifactId>
+            <version>2.25.8</version>
         </dependency>
         <dependency>
-            <groupId>org.ldbcouncil.snb</groupId>
+            <groupId>org.ldbcouncil.snb</groupId>   
             <artifactId>common</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
